# DesktopMonitorBrightness

./: .editorconfig  .gitignore  CMakeLists.txt  DesktopMonitorBrightness.sln  DesktopMonitorBrightness.vcproj  DesktopMonitorBrightness.vcxproj  DesktopMonitorBrightness.vcxproj.filters  GeocodeGrabber.cpp  README.md  conanfile.txt  sample.rc
DesktopMonitorBrightness/: DesktopMonitorBrightness.cpp  DesktopMonitorBrightness.vcxproj  DesktopMonitorBrightness.vcxproj.filters  ReadMe.txt  settings.json  stdafx.cpp  stdafx.h
DesktopMonitorBrightness/Debug/: vc120.idb
DesktopMonitorBrightness/Debug/DesktopM.C5D15DC4.tlog/: CL.read.1.tlog  CL.write.1.tlog  DesktopMonitorBrightness.lastbuildstate  cl.command.1.tlog
DesktopMonitorBrightness/Release/DesktopM.C5D15DC4.tlog/: CL.read.1.tlog  CL.write.1.tlog  DesktopMonitorBrightness.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
enc_temp_folder/297b2676ccadb786606992442064b2e5/: wxui.cpp
enc_temp_folder/851773d821fd56e561fca04e6dd25ef/: wxui.cpp
src/: DesktopMonitorBrightness.cpp  DesktopMonitorBrightness.h  GeocodeGrabber.cpp  GeocodeGrabber.hpp  brightnessControlWindow.cpp  brightnessControlWindow.h  dummy.cpp  qtmain.cpp  stdafx.h  taskbar-icon.qrc  window.cpp  window.h  wxui.cpp  wxui.h
vc_mswu/taskbar/: sample.res
vc_mswu/tmp/: sample.res
